--- a/src/main/resources/templates/mobile/layouts/main.html
+++ b/src/main/resources/templates/mobile/layouts/main.html
@@ -23,7 +23,7 @@
 <body>
     <header th:replace="~{mobile/outlines/_header::common}"></header>
     <main layout:fragment="content"></main>
-    <footer th:replace="~{mobile/outlines/_footer::common]"></footer>
+    <footer th:replace="~{mobile/outlines/_footer::common}"></footer>
     <iframe name="ifrmHidden" class="dn"></iframe>
 </body>
 </html>
