파일 업로드 구현 /자바스크립트

--- a/src/main/resources/templates/front/main/index.html
+++ b/src/main/resources/templates/front/main/index.html
@@ -5,10 +5,10 @@
       layout:decorate="~{front/layouts/main}">
 
 <main layout:fragment="content">
+    <form name="frmSaver" method="POST">
+        <button type="button" class="fileUploads">이미지 업로드</button>
 
-
+    </form>
 </main>
-
-
 </html>
 
