--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -6,27 +6,30 @@
     <meta name="csrf_token" th:content="${_csrf.token}">
     <meta name="csrf_header" th:content="${_csrf.headerName}">
     <title>
-        <th:block th:if="${pageTitle !=null}" th:text="${#strings.concat(pageTitle, ' - ')}"></th:block>
-        사이트 제목>
+        <th:block th:if="${pageTitle != null}"
+        th:text="${#strings.concat(pageTitle, ' - ')}"></th:block>
+        사이트 제목
     </title>
-    <link rel="stylesheet" type="text/css" th:href="@{/common/css/style.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/front/css/style.css}">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" type="text/css" th:href="${@utils.url('/common/css/style.css')}">
+    <link rel="stylesheet" type="text/css" th:href="${@utils.url('/front/css/style.css')}">
     <link th:if="${addCss != null}" rel="stylesheet" type="text/css"
-          th:each="cssFile: ${addCss}" th:href="@{front/css/{file}(file=${cssFile}}">
+          th:each="cssFile: ${addCss}" th:href="${@utils.url(#strings.concat('/front/css/', cssFile, '.css'))}">
     <th:block layout:fragment="addCss"></th:block>
 
-    <script th:src="@{/common/js/common.js}"></script>
-    <script th:src="@{/front/js/common.js}"></script>
+    <script th:src="${@utils.url('/common/js/common.js')}"></script>
+    <script th:src="${@utils.url('/front/js/common.js')}"></script>
 
-    <script th:if="${addCommonScript !=null}" th:each="jsFile: ${addCommonScript}"
-            th:src="@{/common/js/{file}.js(file=${jsFile})}"></script>
+    <script th:if="${addCommonScript != null}" th:each="jsFile : ${addCommonScript}" th:src="${@utils.url(#strings.concat('/common/js/', jsFile, '.js'))}"></script>
     <th:block layout:fragment="addCommonScript"></th:block>
-</head>
 
+    <script th:if="${addScript != null}" th:each="jsFile : ${addScript}" th:src="${@utils.url(#strings.concat('/front/js/', jsFile, '.js'))}"></script>
+    <th:block layout:fragment="addScript"></th:block>
+</head>
 <body>
-    <header th:replace="~{front/outlines/_header::common}"></header>
-    <main layout:fragment="content"></main>
-    <footer th:replace="~{front/outlines/_footer::common}"></footer>
-    <iframe name="ifrmHidden" class="dn"></iframe>
+<header th:replace="~{front/outlines/_header::common}"></header>
+<main layout:fragment="content"></main>
+<footer th:replace="~{front/outlines/_footer::common}"></footer>
+<iframe name="ifrmHidden" class="dn"></iframe>
 </body>
 </html>
